<resources>
    <string name="app_name">Notes</string>
    <string name="list_fragment">list fragment</string>
    <string name="details_fragment">details fragment</string>
    <string name="home">Home</string>
    <string name="favorite">favorite</string>
    <string name="top_app_bar">toolbar</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="settings">Settings</string>
    <string name="group1">group 1</string>
    <string name="user_name">Salim</string>
    <string name="user_email">anasalim28@gmail.com</string>
    <string name="note_details">Note Details</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change">change</string>
    <string name="share">share</string>
    <string name="update">update</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="sing_in_please">Sing in please</string>
    <string name="server_client_id">831360024639-v0mlif75dc53lrucek6eiab1tdspipal.apps.googleusercontent.com</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in_with_vk">Sign in with VK</string>
    <string name="message_connection_error">Connection Error</string>
    <string name="message_unknown_error">Unknown Error</string>
    <string name="user_image">User Image</string>
    <string name="image_user">image_user</string>
    <string name="delete_confirm">Delete Note?</string>
    <string name="delete_confirm_message">Note will be permanently deleted!</string>
    <string name="cancel">Cancel</string>
    <integer name="com_vk_sdk_AppId">7954999</integer>
</resources>