<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/share"
        app:showAsAction="never"
        android:contentDescription="@string/share"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/share" >
    </item>

    <item
        android:id="@+id/delete"
        app:showAsAction="ifRoom"
        android:contentDescription="@string/delete"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="@string/delete" />

    <item
        android:id="@+id/change"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_edit_24"
        android:contentDescription="@string/change"
        android:title="@string/change" />
</menu>