<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/blue_600"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image_header"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        tools:background="@tools:sample/avatars"
        android:src="@drawable/ic_baseline_account_circle_24"
        app:tint="@color/white"
        android:contentDescription="@string/image_user" />

    <TextView
        android:id="@+id/user_name_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/user_name"
        tools:text="@tools:sample/lorem"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/user_email"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="@color/white" />

</LinearLayout>