<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="0dp"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:navigationIconTint="@color/white"
            app:title="@string/settings" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_64"
        tools:src="@tools:sample/avatars"
        android:contentDescription="@string/user_image" />

    <TextView
        android:id="@+id/first_name"
        android:layout_width="0dp"
        android:gravity="end"
        android:fontFamily="@font/roboto"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/image"
        app:layout_constraintStart_toStartOf="parent"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_marginTop="@dimen/margin_64"
        tools:text="@tools:sample/first_names"
        app:layout_constraintEnd_toStartOf="@+id/last_name" />

    <TextView
        android:id="@+id/last_name"
        android:layout_width="0dp"
        android:fontFamily="@font/roboto"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintTop_toBottomOf="@+id/image"
        app:layout_constraintStart_toEndOf="@id/first_name"
        android:layout_marginTop="@dimen/margin_64"
        tools:text="@tools:sample/last_names"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/sign_out_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        android:layout_marginBottom="@dimen/default_margin"
        android:fontFamily="@font/roboto"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingHorizontal="@dimen/horizontal_padding_36"
        android:paddingVertical="@dimen/vertical_padding_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>